@@ -1,5 +1,11 @@
 2003-06-27  Elena Zannoni  <ezannoni@redhat.com>
 
+        * symfile.c (syms_from_objfile): Move variables to inner block.
+        Move the checks for the non-mainline case a bit earlier to avoid
+        doing some useless computations.
+
+2003-06-27  Elena Zannoni  <ezannoni@redhat.com>
+
         * dwarfread.c (decode_modified_type): Gag new compiler warning.
 
 2003-06-26  Michael Chastain  <mec@shout.net>
